--- a/project_report.tex
+++ b/project_report.tex
@@ -491,10 +491,10 @@ For infinite number of iPads, however, the cost table method break down. As the 
 % Start of Chapter 7
 %===============================================================================
 \chapter{Conclusion}
-We have presented 3 different approaches, namely the cost table approach, the optimum level approach, and the combinatorics approach. We discussed how to design the game logic using each of the three approaches, how they work, their implementations, their advantages and disadvantages. We also talked about how to extend our approaches to support several extension of the game. \\\\
-The cost table is simple and fast, easy to understand and extensible. It is good for designing the game logic but it is not very good at giving hints. In contrast, the optimum level approach would be better at giving hints. Therefore it good be a good idea to combine them so that we can design game logics for different extensions of the game and yet still be able to provide hints. \\\\
-The combinatorics method is interesting method to compute the cost table but not as straightforward as the dynamic programming method. It can be super fast on computing certain huge problems. However, it might not be as fast as the dynamic programming algorithm in populating the table. \\\\
-Throughout the duration of this project, we gained a lot of knowledge and insights from what we have found and what we have developed. We also gained some experiences of doing research! We are happy.
+We have presented 3 different approaches, namely the cost table approach, the optimum level approach, and the combinatorics approach. We discussed the design of the game logic using each approach, how they work, their implementations, their advantages and disadvantages. We also talked about how we can extend our approaches to support several extensions of the game. \\\\
+The cost table is simple and fast, easy to understand and extensible. It is good for designing the game logic but not very suitable for giving hints. In contrast, the optimum level approach would be better for giving hints. Thus, it can be a good idea to combine them so that we can design game logics for different extensions of the game and yet still be able to provide hints. \\\\
+The combinatorics method is a interesting method to compute the cost table but not as straightforward as the dynamic programming method. Even though this approach can be fast when computing certain huge problems, it might not be as fast as the dynamic programming algorithm when it comes to populating the table. \\\\
+Through this project, we have gained a lot of new knowledge and insights from the solutions we presented. More importantly, the experiences gained from this project will definitely be useful for us in doing future research.
 
 %===============================================================================
 % End of Chapter 7
