--- a/project_report.tex
+++ b/project_report.tex
@@ -532,7 +532,7 @@ To solve the problem when the cost of an iPad is a constant $c$, we need replace
 
 Even when there are inifinitely many available iPad for use, the inequality can be modified to solve the problem. Instead of summing until $N$, we can sum until ${H-ck \choose k}$ still makes sense, that is until $\lfloor H/c \rfloor$. This gives us the inequality: \[\sum_{k=0}^{\lfloor H/c \rfloor} {H-ck \choose k} \geq L+1\]
 
-A modification can also be made to solve the problem with dynamic iPad cost. Let $f(x)$ be the function that return the cost of the $x^{th}$ iPad crushed. We define the function $S(x)$ as the sum of the cost of the 1st $x$ iPads crushed, i.e.: \[S(x) = \sum_{i=0}^x f(i)\] The core inequality essential to the combinatoric method will then become: \[\sum_{k=0}^N {H-S(k) \choose k} \geq L+1\] If there are infinitely many iPads available, the inequality becomes: \[\sum_{\substack{k \in \mathbb{Z}_{\geq 0}\\ S(k) < H}} {H-S(k) \choose k} \geq L+1\] Using this inequality and the algorithm outlined in the previous section, we can compute the cost in the worst case scenario on the fly. Hence we can decide, given a level l that the player wants to crush the iPad at and the number of iPads that have been crushed, whether making the iPad survive or crushed will be the worse scenario. This is an advantage compared to the dynamic programming approach, which cannot compute all the possible game states before hand (because there are infinitely many game states) and its running time is slow when computing on the fly.
+A modification can also be made to solve the problem with dynamic iPad cost. Let $f(x)$ be the function that return the cost of the $x^{th}$ iPad crushed. We define the function $S(x)$ as the sum of the cost of the 1st $x$ iPads crushed, i.e.: \[S(x) = \sum_{i=0}^x f(i)\] The core inequality essential to the combinatoric method will then become: \[\sum_{k=0}^N {H-S(k) \choose k} \geq L+1\] If there are infinitely many iPads available, the inequality becomes: \[\sum_{\substack{k \in \mathbb{Z}_{\geq 0}\\ S(k) < H}} {H-S(k) \choose k} \geq L+1\] However, to support the game logic, we also need to factor in the number of iPad used $p$. This can be done subtracting $S(p)$ - the total cost of the $p$ iPads crushed, from $S(k)$. This gives the formula:  \[\sum_{\substack{k \in \mathbb{Z}_{\geq 0}\\ S(k) - S(p) < H}} {H-S(k)+S(p) \choose k} \geq L+1\] Using this inequality and the algorithm outlined in the previous section, we can compute the cost in the worst case scenario on the fly. Hence we can decide, giventhe level that the player wants to crush the iPad at and the number of iPads that have been crushed, whether making the iPad survive or crushed will be the worse scenario. This is an advantage compared to the dynamic programming approach, which cannot compute all the possible game states before hand (because there are infinitely many game states) and its running time is slow when computing on the fly.
 
 %===============================================================================
 % End of Chapter 6
